--- a/.github/workflows/springboot-ci-pipeline.yaml
+++ b/.github/workflows/springboot-ci-pipeline.yaml
@@ -25,7 +25,7 @@ jobs:
         run: mvn clean install
 
       - name: Run OWASP Dependency Check
-        uses: dependency-check/github-action@v2.1.0
+        uses: dependency-check/Dependency-Check_Action@main
         with:
           project: "spring-boot-app"
           scanPath: "."
