--- a/.github/workflows/springboot-ci-pipeline.yaml
+++ b/.github/workflows/springboot-ci-pipeline.yaml
@@ -17,9 +17,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up JDK 11
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v4
         with:
           java-version: '11'
+          distribution: 'temurin'
 
       - name: Build with Maven
         run: mvn clean install
