--- a/.github/workflows/springboot-ci-pipeline.yaml
+++ b/.github/workflows/springboot-ci-pipeline.yaml
@@ -23,7 +23,7 @@ jobs:
           distribution: 'temurin'
 
       - name: Build with Maven
-        run: mvn clean install
+        run: mvn clean install -DskipTests
 
       - name: Run OWASP Dependency Check
         uses: dependency-check/Dependency-Check_Action@main
